<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_screen_background"
    android:orientation="vertical"
    android:padding="20dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="20dp"
            style="@style/TextTitleStyle"
            android:textColor="@color/white"
            android:text="@string/app_name"  />

    </FrameLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_search"
        style="@style/ButtonMainStyleMaterial"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/search"
        app:icon="@drawable/search" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_media"
        style="@style/ButtonMainStyleMaterial"
        android:layout_marginBottom="16dp"
        android:text="@string/media"
        app:icon="@drawable/media" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_settings"
        style="@style/ButtonMainStyleMaterial"
        android:layout_marginBottom="16dp"
        android:text="@string/settings"
        app:icon="@drawable/settings" />

</LinearLayout>